Bug 82165 - FILEOPEN: MSO ODT - Left page header has duplicate image in it
Summary: FILEOPEN: MSO ODT - Left page header has duplicate image in it
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.2.3 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: odf target:4.4.0 target:4.2.7 target:...
Keywords: bibisected, filter:odt, regression
: 77765 82256 (view as bug list)
Depends on:
Blocks: Writer-Header-Footer
  Show dependency treegraph
 
Reported: 2014-08-05 02:45 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-10-31 06:27 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-08-05 02:45:08 UTC
Steps:
1) open attachment 104034 [details]
2) scroll to page 2
3) You will see that the header has 2 

Word 2013 VS LibO 4.3.1 - attachment 104035 [details]

Tested on 4.3.1 on Linux and master on Windows. This is a regression that began in 4.0.x or 4.1.x. 4.0.6 wont open the sample file, so i'm not sure if its present in that branch.
Comment 1 Yousuf Philips (jay) (retired) 2014-08-05 02:49:31 UTC
I forgot to complete step 3, so here it is.
3) You will see that the header has 2 images in it instead of 1, as it does on page 3
Comment 2 tommy27 2014-08-05 05:31:53 UTC
confirmed unde Win7x64 using  4.4.0.0.alpha0+
Build ID: 8dc2ab47b9e5ef0ff381575195a36ceec8789ef1
TinderBox: Win-x86@42, Branch:master, Time: 2014-08-02_23:22:41

status NEW
Comment 3 Xisco Faulí 2014-08-05 09:12:45 UTC
bibisected:
 32c7515d0a5143cdc0c174c7d9767e00a0bef0c8 is the first bad commit
commit 32c7515d0a5143cdc0c174c7d9767e00a0bef0c8
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Fri Oct 18 01:41:54 2013 +0000

    source-hash-4450b1b93f7f7b5f97c631fe767b1156350a9227
    
    commit 4450b1b93f7f7b5f97c631fe767b1156350a9227
    Author:     Marcos Paulo de Souza <marcos.souza.org@gmail.com>
    AuthorDate: Mon Aug 19 17:31:14 2013 -0300
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Tue Aug 20 11:22:20 2013 +0000
    
        Translate some words in Math Elements Dock
    
        Change-Id: I7d5075b0c9ac481b954c6a843b35e46355b5348e
        Reviewed-on: https://gerrit.libreoffice.org/5519
        Reviewed-by: Caolán McNamara <caolanm@redhat.com>
        Tested-by: Caolán McNamara <caolanm@redhat.com>

:100644 100644 923cf9271e520e4cba060aafee127bf25d9de353 f8d46c26fa602a70c2760fbcccdf09b45dccf931 M	ccache.log
:100644 100644 655b42ff50585081fa8fc4e591ef71e6998b32ac 213658bbfa69e3b1cc8453a72690be4197f7d579 M	commitmsg
:100644 100644 08530fe366f39e3d2f5dd0fcb79686ad06249162 a0594589d8e6946b9fd9ccd8414d47b3de503d17 M	dev-install.log
:100644 100644 bae8a10aca3ace47245afafe42190ef0fcf9d6bd b99e076bc64e5f883065bc8a3daec5ec82615c4c M	make.log
:040000 040000 3c8912a54de878adc1a00c4f4962f162f68edad1 6bdbcb6ff0fb3eb814268cee3de0fd40d1bcabb0 M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# skip: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
git bisect skip a043626b542eb8314218d7439534dce2fc325304
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# skip: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect skip c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# skip: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect skip c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# skip: [9771d0c212cfa71b07742ff3dc5c05df22d600eb] source-hash-a9a0933ec67eab0ec31c8fadb60fb8e8e3e90485
git bisect skip 9771d0c212cfa71b07742ff3dc5c05df22d600eb
# bad: [32c7515d0a5143cdc0c174c7d9767e00a0bef0c8] source-hash-4450b1b93f7f7b5f97c631fe767b1156350a9227
git bisect bad 32c7515d0a5143cdc0c174c7d9767e00a0bef0c8
# good: [e128a0b9bd133d989b87354bd271ef25c642b7bc] source-hash-7be71336862204f0763fc2f8cf62a6f48f341114
git bisect good e128a0b9bd133d989b87354bd271ef25c642b7bc
# good: [a22bedaefd4f837e884f70bc50b0f916160b4c49] source-hash-a4c385f1aa98b5fb2d85136b653365fb6baa33f8
git bisect good a22bedaefd4f837e884f70bc50b0f916160b4c49
# good: [6dab1aaf04879f7ed6ca8baace99020b7f709443] source-hash-417d1c2b13cbd70300d2921b5667dfadc7e25895
git bisect good 6dab1aaf04879f7ed6ca8baace99020b7f709443
# good: [47eb057002a197e6540b6bedd31d5427a82c4ebd] source-hash-e4f55865078e887a34d7b127b75d01ae374968de
git bisect good 47eb057002a197e6540b6bedd31d5427a82c4ebd
# good: [448f216b427beae48e9019efe0b1265c0bb59722] source-hash-69a0571d6b885cc4771554d22a63170651647f3b
git bisect good 448f216b427beae48e9019efe0b1265c0bb59722
# first bad commit: [32c7515d0a5143cdc0c174c7d9767e00a0bef0c8] source-hash-4450b1b93f7f7b5f97c631fe767b1156350a9227
Comment 4 Xisco Faulí 2014-08-05 10:10:06 UTC
@mstahl: Could it be that this problem was introduced by one of the commits done for bug 66145 ?
Comment 5 Michael Stahl 2014-08-11 18:52:55 UTC
regression from:

commit b8499fc3dcf474050f026b8d5cd1d9037bbe42b7
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Mon Aug 19 14:45:20 2013 +0200

    fdo#66145: revert change to CopyMasterHeader
Comment 6 Commit Notification 2014-08-12 16:04:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=555c988f3b896e16afc7bdd1bd98e48229599637

fdo#82165: ODF import: clear all shapes when removing header content



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2014-08-12 16:08:51 UTC
fixed on master
Comment 8 Michael Stahl 2014-08-12 16:54:19 UTC
*** Bug 82256 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2014-08-14 08:23:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c4c37e3745a3998f29d8aa15d2023cb3d07424b&h=libreoffice-4-2

fdo#82165: ODF import: clear all shapes when removing header content


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-08-14 08:23:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe7d0f8b60c7a99d150b32eb5530a4a530267fab&h=libreoffice-4-3

fdo#82165: ODF import: clear all shapes when removing header content


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2014-08-15 14:46:10 UTC
*** Bug 77765 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2014-08-15 16:10:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36ae57de85d6a6b82645018b71d8fd752cf6bc4d&h=libreoffice-4-3-1

fdo#82165: ODF import: clear all shapes when removing header content


It will be available already in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Vitaly 2014-08-18 05:46:48 UTC
Everything is working fine, thank you!
libo-43~2014-08-16_09.56.42_LibreOfficeDev_4.3.2.0.0_Win_x86.msi
Comment 14 Yousuf Philips (jay) (retired) 2014-08-18 09:29:04 UTC
Confirmed that attachment 104034 [details], attachment 97745 [details] (bug 77765), and attachment 104162 [details] (bug 82256) all work correctly.

Version: 4.3.2.0.0+
Build ID: 2d52a907e26c306fa6738766409df2d7760fe3c4
TinderBox: Win-x86@42, Branch:libreoffice-4-3, Time: 2014-08-16_09:56:42
Comment 15 Robinson Tryon (qubit) 2015-12-17 05:54:53 UTC Comment hidden (obsolete)