fdo#82165: ODF import: clear all shapes when removing header content

Shapes anchored to the first or last paragraph survive setString("")
so need to be deleted with some ruse.

(regression from b8499fc3dcf474050f026b8d5cd1d9037bbe42b7)

Change-Id: I00a8132583c45d1953c207932cc7f02f3065ae77
(cherry picked from commit 555c988f3b896e16afc7bdd1bd98e48229599637)
Reviewed-on: https://gerrit.libreoffice.org/10894
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>
(cherry picked from commit fe7d0f8b60c7a99d150b32eb5530a4a530267fab)